[gd_scene load_steps=23 format=3 uid="uid://bpv7yov6wrgnk"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_gx23i"]
[ext_resource type="Texture2D" uid="uid://b1yx4vfc3tagm" path="res://assets/Sprites/PlayerCharacters/1 Woodcutter/Woodcutter_idle.png" id="2_5827a"]
[ext_resource type="Texture2D" uid="uid://0i1fo5ks64va" path="res://assets/Sprites/PlayerCharacters/1 Woodcutter/Woodcutter_walk.png" id="3_w7c55"]
[ext_resource type="PackedScene" uid="uid://bkemc1h4oq8c2" path="res://Utility/hurt_box.tscn" id="4_w5g3r"]
[ext_resource type="Texture2D" uid="uid://dh4gn31tywb3" path="res://assets/exp_background.png" id="5_s0utp"]
[ext_resource type="Texture2D" uid="uid://b0f7jvgjtk2f6" path="res://assets/exp_progress.png" id="6_xsmjl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f5a4j"]
atlas = ExtResource("2_5827a")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4e1l"]
atlas = ExtResource("2_5827a")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkgfd"]
atlas = ExtResource("2_5827a")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8hbd"]
atlas = ExtResource("2_5827a")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar4fl"]
atlas = ExtResource("3_w7c55")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmvcm"]
atlas = ExtResource("3_w7c55")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ovv7"]
atlas = ExtResource("3_w7c55")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmnb"]
atlas = ExtResource("3_w7c55")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u08wu"]
atlas = ExtResource("3_w7c55")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijel0"]
atlas = ExtResource("3_w7c55")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_4f2f5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5a4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4e1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkgfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8hbd")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar4fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmvcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ovv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u08wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijel0")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jeav"]
size = Vector2(120, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hnahh"]
size = Vector2(95, 123)

[sub_resource type="CircleShape2D" id="CircleShape2D_mhmwj"]
radius = 664.019

[sub_resource type="CircleShape2D" id="CircleShape2D_2m07c"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p38sh"]

[node name="Woodcutter" type="CharacterBody2D" groups=["player"]]
position = Vector2(12, -15)
scale = Vector2(0.25, 0.25)
motion_mode = 1
script = ExtResource("1_gx23i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(48, -48)
scale = Vector2(6.08333, 5.58333)
sprite_frames = SubResource("SpriteFrames_4f2f5")
animation = &"Idle"
autoplay = "Idle"
frame = 2
frame_progress = 0.675697

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_2jeav")

[node name="HurtBox" parent="." instance=ExtResource("4_w5g3r")]
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_hnahh")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
wait_time = 0.075

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_mhmwj")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_2m07c")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_p38sh")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture_under = ExtResource("5_s0utp")
texture_progress = ExtResource("6_xsmjl")

[node name="Label_Level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 14
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="Label_LevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "Level Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="sound_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="HurtBox"]
